# backend/docs/swagger.yaml
@@ -165,6 +165,12 @@ definitions:
       promo_code:
         example: true
         type: boolean
+      sort_by:
+        example: start_date_time
+        type: string
+      sort_order:
+        example: desc
+        type: string
       start_date_time:
         example: 2024-05-01 12:00:00.000000 +00:00
         type: string
